--- a/src/elements/cardsTable.css
+++ b/src/elements/cardsTable.css
@@ -4,6 +4,12 @@
   box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24);
 }
 
-.card :hover {
+.card:hover {
   cursor: pointer;
+  /* transform: scale(1.05); */
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
+}
+
+.card-img-top {
+  height: 250px;
 }
